[B][COLOR=FF56ADDA]v4.5.4[/COLOR][/B]
• Added: New custom widget path selection method (based on the lastest Skinshortcuts GitHub release)
• Changed: Some conditions, which can cause overlappings
• Merged: Translations

[B][COLOR=FF56ADDA]v4.5.3[/COLOR][/B]
• Changed: Increased the logo size in NetFilx
• Changed: Improved the movement controls for the menu editing dialog

[B][COLOR=FF56ADDA]v4.5.2[/COLOR][/B]
• Fixed: Sideblade menu access issues in Shelf/NetFilx, if the view type "Slide" is disabled
• Fixed: Some more NetFilx issues (background, onup-conditions)
• Fixed: Not working Kios Mode in NetFilx/Shelf
• Changed: Some minor layout adjustments of the recently indroduced Banner Art view
• Changed: Adjusted the look and feel of the Banner List view
• Fixed: Typo and missing views in the Show IDs dialog

[B][COLOR=FF56ADDA]v4.5.1[/COLOR][/B]
• Added: New viewtype "Banner Art" for Movies/TV Shows/Seasons
• Fixed: Addon.xml requirements for newest skinshortcuts script

[B][COLOR=FF56ADDA]v4.5.0[/COLOR][/B]
• Fixed: Fixed viewtype settings for YouTube plugin (I hope so)
• Fixed: "Show IDs" dialog

[B][COLOR=FF56ADDA]v4.4.9a[/COLOR][/B]
• Added: Edit Shutdow Menu and Edit Main Menu to the default shutdown menu entries if somebody can't access the settings to perform a reset (skinshortcuts script bug)

[B][COLOR=FF56ADDA]v4.4.9[/COLOR][/B]
• Fixed: Window open / close music logo animation
• Added: Customizable shutdownmenu

[B][COLOR=FF56ADDA]v4.4.8[/COLOR][/B]
• Fixed: ClassicSlide previos texture issue while moving
• Fixed: Unmatched parentheses errors and other code issues
• Fixed: Fall back of A_DTS / A_EAC3 video flags
• Fixed: Small navigation issue in Skin Settings
• Changed: Clock with start / finish time will be displayed if the player is paused

[B][COLOR=FF56ADDA]v4.4.7[/COLOR][/B]
• Fixed: Plot for sets (Shelf)
• Fixed: Visible empty disc art if "group movies to sets" is activated (Shelf)