@@ -141,8 +141,8 @@
 					<width>190</width>
 					<textwidth>140</textwidth>
 					<include>DialogsButtonsText</include>
-					<texturefocus border="49,0,49,0">dialogs/buttons/add_focus.png</texturefocus>
-					<texturenofocus border="49,0,49,0">dialogs/buttons/add_nofocus.png</texturenofocus>
+					<texturefocus border="49,0,49,0">dialogs/buttons/save_focus.png</texturefocus>
+					<texturenofocus border="49,0,49,0">dialogs/buttons/save_nofocus.png</texturenofocus>
 					<label>$LOCALIZE[20177]</label>
 					<onclick>Close</onclick>
 					<onleft>1000</onleft>
@@ -157,9 +157,9 @@
 					<width>190</width>
 					<textwidth>140</textwidth>
 					<include>DialogsButtonsText</include>
-					<texturefocus border="49,0,49,0">dialogs/buttons/cancel_focus.png</texturefocus>
-					<texturenofocus border="49,0,49,0">dialogs/buttons/cancel_nofocus.png</texturenofocus>
-					<label>$LOCALIZE[31329]</label>
+					<texturefocus border="49,0,49,0">dialogs/buttons/settings_focus.png</texturefocus>
+					<texturenofocus border="49,0,49,0">dialogs/buttons/settings_nofocus.png</texturenofocus>
+					<label>$LOCALIZE[10035]</label>
 					<onclick>Skin.Reset(widgetgroup.$VAR[CustomWidgetNumber].Source)</onclick>
 					<onclick>Skin.Reset(widgetgroup.$VAR[CustomWidgetNumber].Label)</onclick>
 					<onclick>Skin.Reset(widgetgroup.$VAR[CustomWidgetNumber].Label2)</onclick>
