@@ -1,5 +1,6 @@
 [B][COLOR=FF56ADDA]v4.5.4[/COLOR][/B]
 • Added: New custom widget path selection method (based on the lastest Skinshortcuts GitHub release)
+• Added: Valid source check for custom widget path
 • Changed: Some conditions, which can cause overlappings
 • Merged: Translations
 
